# mailservice

./: .gitignore  Dockerfile  Makefile.am  build.sh  configure.ac  decrypt_key.py  docker-run.sh  encrypt_key.py  imaps-build.sh  mailservice-entrypoint.cpp  postfix-entrypoint  smtps-build.sh
dovecot/cfg/: dovecot-ldap.conf.ext
dovecot/cfg/conf.d/: 10-auth.conf  10-logging.conf  10-mail.conf  10-master.conf  10-ssl.conf  15-public-mailboxes.conf
openldap/: ldap.conf
postfix/cfg/: drop.cidr  identitycheck.pcre  ldap_virtual_recipients.cf  main.cf  master.cf  rsyslog.conf  rsyslog.conf.min  virtual_domains
postfix/cfg/certs/: dh_1024.pem  dh_512.pem
postfix/cfg/sasl/: smtpd.conf
private/: testaws_pcifarelli_net_privkey.pem.encrypted
public_certs/: testaws_pcifarelli_net_fullchain.pem
rsyslog/cfg/: rsyslog.conf
saslauthd/cfg/: saslauthd  saslauthd.conf
src/: Makefile.am  mailserviceentrypoint  mailserviceentrypoint.cpp
